--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,26 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/favicon.png" />
-   	<title>SpotsBall</title>
+    <title>SpotsBall</title>
 
-	<link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
-	<link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
-	<link href="%PUBLIC_URL%/css/flipdown.css" rel="stylesheet" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css" />
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" /> -->
+    <link href="%PUBLIC_URL%/css/flipdown.css" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+
     <title>Spots Ball</title>
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-/>
-
-
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
-   
   </body>
 </html>
