--- a/public/index.html
+++ b/public/index.html
@@ -17,35 +17,28 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
     <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css" />
-    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" /> -->
     <link href="%PUBLIC_URL%/css/flipdown.css" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Spots Ball</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-   <script>
+    <!-- Google Tag Manager -->
+    <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
+          dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-PJB6GLXW');
+      })(window, document, "script", "dataLayer", "GTM-PJB6GLXW");
     </script>
     <!-- End Google Tag Manager -->
   </head>
   <body>
-    <div id="root"></div>
     <!-- Google Tag Manager (noscript) -->
-   <noscript>
+    <noscript>
       <iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-PJB6GLXW"
         height="0"
@@ -54,5 +47,7 @@
       ></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <div id="root"></div>
   </body>
 </html>
