--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,user-scalable=0 ,orientation=portrait"
     />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/favicon.png" />
     <title>SpotsBall</title>
 
